# libtokenizer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
cmake/: Options.cmake  PostBuild.cmake
ctest/: CMakeLists.txt  TestOpenFile.cxx  TestOpenFileErrorEmptyString.cxx  TestOpenFileErrorFileNotFound.cxx  TestOpenFileErrorFileNotRegular.cxx  TestParseFileGenerator.cxx  TestParseFileStreamEof.cxx  TestParseFileStreamGet.cxx  TestParseFileStreamIgnore.cxx  TestParseFileStreamIgnoreMultiple.cxx  TestParseFileStreamPeek.cxx  TestParseFileStreamSeek.cxx  TestParseFileStreamTell.cxx
ctest/TestFiles/: TestParseFileStream.txt
ctest/cmake/: PostBuild.cmake
example/: CMakeLists.txt
example/src/: main.cxx
include/: tokenizer.hxx
include/errors/: file_error.hxx
include/libtokenizer/: tokenizer.hxx
include/libtokenizer/errors/: tokenizer_error.hxx
release/: v1.0-alpha.md
src/: tokenizer.cxx
src/errors/: file_error.cxx  tokenizer_error.cxx
